@@ -1,3 +1,5 @@
+* movement now done without pop up dialogs
+
 * only allow transports to unload units to 1 territory
 
 * fixed bug [ 1238910 ] PBEM mode cannot accept subdomains
@@ -9,6 +11,8 @@
 * autosave now happens at the end of a turn, after combat move and before non combat 
 
 * use annotations to determine when to autosave
+
+* change to jdk 1.5, 1.5 is now required to build and to run
 
 * fix bug where versions like 0.6.0.1 would be displayed as 0.6.1
 
